# faf-prop

./: CMakeLists.txt  README.md
offline/database/: pdbcalbase  phparameter
offline/framework/ffaobjects/: CMakeLists.txt  LinkDef.h
offline/framework/frog/: CMakeLists.txt
offline/framework/fun4all/: CMakeLists.txt
offline/framework/phool/: CMakeLists.txt  LinkDef.h
offline/framework/phoolraw/: CMakeLists.txt
simulation/g4simulation/: eicphysicslist
simulation/g4simulation/g4bbc/: CMakeLists.txt  LinkDef.h
simulation/g4simulation/g4calo/: CMakeLists.txt
simulation/g4simulation/g4decayer/: CMakeLists.txt
simulation/g4simulation/g4detectors/: CMakeLists.txt  LinkDef.h
simulation/g4simulation/g4epd/: CMakeLists.txt
simulation/g4simulation/g4eval/: CMakeLists.txt
simulation/g4simulation/g4gdml/: CMakeLists.txt
simulation/g4simulation/g4intt/: CMakeLists.txt  LinkDef.h
simulation/g4simulation/g4main/: CMakeLists.txt  LinkDef.h
simulation/g4simulation/g4micromegas/: CMakeLists.txt
simulation/g4simulation/g4mvtx/: CMakeLists.txt
simulation/g4simulation/g4tpc/: CMakeLists.txt
simulation/g4simulation/g4vertex/: CMakeLists.txt  LinkDef.h
test/: CMakeLists.txt  README.md  tdiff.cc
